--- a/css/publications.css
+++ b/css/publications.css
@@ -1,7 +1,7 @@
 .version.publications /* version checker */
 {
-	color: #00000B;
-	background-color: #4D59B0;
+	color: #0000EA;
+	background-color: #E30410;
 }
 
 .html
@@ -13,28 +13,42 @@
 {
 	z-index: 1;
 	width: 680px;
-	min-height: 499px;
+	min-height: 498.8000000000011px;
 	-pie-box-shadow: 0px 0px 10px 3px #E5E5E5;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.1),0px 0px 10px rgba(0,0,0,0.1);
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: #FFFFFF;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+#page_position_content
+{
+	margin-top: -1px;
+	margin-bottom: -15px;
+	width: 0.01px;
+}
+
 #top
 {
-	position: relative;
-	width: 22px;
-	margin-right: -10000px;
 	left: -22px;
+	margin-top: 1px;
+	position: relative;
+}
+
+#pu322-3
+{
+	width: 0.01px;
+	padding-bottom: 51px;
+	margin-top: -19px;
 }
 
 #u322-3
 {
-	z-index: 801;
+	z-index: 822;
 	width: 680px;
 	min-height: 50px;
 	top: 0px;
@@ -42,135 +56,9 @@
 	margin-left: -340px;
 }
 
-#pu392-4
-{
-	width: 0.01px;
-	padding-bottom: 0px;
-	margin-right: -10000px;
-	margin-top: 59px;
-	margin-left: 20px;
-}
-
-#u392-4
-{
-	z-index: 2;
-	width: 639px;
-	min-height: 34px;
-	background-color: transparent;
-	color: #14988B;
-	line-height: 31px;
-	text-align: center;
-	font-size: 26px;
-	font-weight: bold;
-	position: relative;
-}
-
-#u820-788
-{
-	z-index: 6;
-	width: 639px;
-	min-height: 480px;
-	background-color: transparent;
-	color: #000000;
-	position: relative;
-}
-
-#u820-3
-{
-	font-size: 10px;
-	text-decoration: none;
-	font-weight: bold;
-	line-height: 0px;/* 0 for mixed font sized paras; applied on spans instead */
-}
-
-#u820
-{
-	font-size: 12px;
-	text-decoration: none;
-	color: #000000;
-	font-weight: normal;
-	line-height: 14px;
-}
-
-#u1026
-{
-	margin-top: -54px;
-	margin-bottom: 54px;
-}
-
-#u820-52
-{
-	font-size: 12px;
-	line-height: 14px;
-}
-
-#u1028
-{
-	margin-top: -56px;
-	margin-bottom: 56px;
-}
-
-#u820-17,#u820-49,#u820-571
-{
-	font-size: 1px;
-	line-height: 0px;
-}
-
-#u1024
-{
-	margin-top: -70px;
-	margin-bottom: 70px;
-}
-
-#u820-23,#u820-55,#u820-56,#u820-576,#u820-577
-{
-	font-size: 16px;
-	text-decoration: none;
-	line-height: 19px;
-	font-weight: bold;
-}
-
-#u820-58,#u820-59,#u820-61,#u820-62,#u820-64,#u820-65,#u820-67,#u820-68,#u820-70,#u820-71,#u820-73,#u820-74,#u820-76,#u820-77,#u820-79,#u820-80,#u820-82,#u820-83,#u820-85,#u820-86,#u820-88,#u820-89,#u820-91,#u820-92,#u820-94,#u820-95,#u820-97,#u820-98,#u820-100,#u820-101,#u820-103,#u820-104,#u820-106,#u820-107,#u820-109,#u820-110,#u820-112,#u820-113,#u820-115,#u820-116,#u820-118,#u820-119,#u820-121,#u820-122,#u820-124,#u820-125,#u820-127,#u820-128,#u820-130,#u820-131,#u820-133,#u820-134,#u820-136,#u820-137,#u820-139,#u820-140,#u820-142,#u820-143,#u820-145,#u820-146,#u820-148,#u820-149,#u820-151,#u820-152,#u820-154,#u820-155,#u820-157,#u820-158,#u820-160,#u820-161,#u820-163,#u820-164,#u820-166,#u820-167,#u820-169,#u820-170,#u820-172,#u820-173,#u820-175,#u820-176,#u820-178,#u820-179,#u820-181,#u820-182,#u820-184,#u820-185,#u820-187,#u820-188,#u820-190,#u820-191,#u820-193,#u820-194,#u820-196,#u820-197,#u820-199,#u820-200,#u820-202,#u820-203,#u820-205,#u820-206,#u820-208,#u820-209,#u820-211,#u820-212,#u820-214,#u820-215,#u820-217,#u820-218,#u820-220,#u820-221,#u820-223,#u820-224,#u820-226,#u820-227,#u820-229,#u820-230,#u820-232,#u820-233,#u820-235,#u820-236,#u820-238,#u820-239,#u820-241,#u820-242,#u820-244,#u820-245,#u820-247,#u820-248,#u820-250,#u820-251,#u820-253,#u820-254,#u820-256,#u820-258,#u820-259,#u820-261,#u820-262,#u820-264,#u820-265,#u820-267,#u820-268,#u820-270,#u820-271,#u820-273,#u820-274,#u820-276,#u820-277,#u820-279,#u820-280,#u820-282,#u820-283,#u820-285,#u820-286,#u820-288,#u820-289,#u820-291,#u820-292,#u820-294,#u820-295,#u820-297,#u820-298,#u820-300,#u820-301,#u820-303,#u820-304,#u820-306,#u820-307,#u820-309,#u820-310,#u820-312,#u820-313,#u820-315,#u820-316,#u820-318,#u820-319,#u820-321,#u820-322,#u820-324,#u820-325,#u820-327,#u820-328,#u820-330,#u820-331,#u820-333,#u820-334,#u820-336,#u820-337,#u820-339,#u820-340,#u820-342,#u820-343,#u820-345,#u820-346,#u820-348,#u820-349,#u820-351,#u820-352,#u820-354,#u820-355,#u820-357,#u820-358,#u820-360,#u820-361,#u820-363,#u820-364,#u820-366,#u820-367,#u820-369,#u820-370,#u820-372,#u820-373,#u820-375,#u820-376,#u820-378,#u820-379,#u820-381,#u820-382,#u820-384,#u820-385,#u820-387,#u820-388,#u820-390,#u820-391,#u820-393,#u820-394,#u820-396,#u820-397,#u820-399,#u820-400,#u820-402,#u820-403,#u820-405,#u820-406,#u820-408,#u820-409,#u820-411,#u820-412,#u820-414,#u820-415,#u820-417,#u820-418,#u820-420,#u820-421,#u820-423,#u820-424,#u820-426,#u820-427,#u820-429,#u820-430,#u820-432,#u820-433,#u820-435,#u820-436,#u820-438,#u820-439,#u820-441,#u820-442,#u820-444,#u820-445,#u820-447,#u820-448,#u820-450,#u820-451,#u820-453,#u820-454,#u820-456,#u820-457,#u820-459,#u820-460,#u820-462,#u820-463,#u820-465,#u820-466,#u820-468,#u820-469,#u820-471,#u820-472,#u820-474,#u820-475,#u820-477,#u820-478,#u820-480,#u820-481,#u820-483,#u820-484,#u820-486,#u820-487,#u820-489,#u820-490,#u820-492,#u820-493,#u820-495,#u820-496,#u820-498,#u820-499,#u820-501,#u820-502,#u820-504,#u820-505,#u820-507,#u820-508,#u820-510,#u820-511,#u820-513,#u820-514,#u820-516,#u820-517,#u820-519,#u820-520,#u820-522,#u820-523,#u820-525,#u820-526,#u820-528,#u820-529,#u820-531,#u820-532,#u820-534,#u820-535,#u820-537,#u820-538,#u820-540,#u820-541,#u820-543,#u820-544,#u820-546,#u820-547,#u820-549,#u820-550,#u820-552,#u820-579,#u820-580,#u820-582,#u820-583,#u820-585,#u820-586,#u820-588,#u820-589,#u820-591,#u820-592,#u820-594,#u820-595,#u820-597,#u820-598,#u820-600,#u820-601,#u820-603,#u820-604,#u820-606,#u820-607,#u820-609,#u820-610,#u820-612,#u820-613,#u820-615,#u820-616,#u820-618,#u820-619,#u820-621,#u820-622,#u820-624,#u820-625,#u820-627,#u820-628,#u820-630,#u820-631,#u820-633,#u820-634,#u820-636,#u820-637,#u820-639,#u820-640,#u820-642,#u820-643,#u820-645,#u820-646,#u820-648,#u820-649,#u820-651,#u820-652,#u820-654,#u820-655,#u820-657,#u820-658,#u820-660,#u820-661,#u820-663,#u820-664,#u820-666,#u820-667,#u820-669,#u820-670,#u820-672,#u820-673,#u820-675,#u820-676,#u820-678,#u820-679,#u820-681,#u820-682,#u820-684,#u820-685,#u820-687,#u820-688,#u820-690,#u820-691,#u820-693,#u820-694,#u820-696,#u820-697,#u820-699,#u820-700,#u820-702,#u820-703,#u820-705,#u820-706,#u820-708,#u820-709,#u820-711,#u820-712,#u820-714,#u820-715,#u820-717,#u820-718,#u820-720,#u820-721,#u820-723,#u820-724,#u820-726,#u820-727,#u820-729,#u820-730,#u820-732,#u820-733,#u820-735,#u820-736,#u820-738,#u820-739,#u820-741,#u820-742,#u820-744,#u820-745,#u820-747,#u820-748,#u820-750,#u820-751,#u820-753,#u820-754,#u820-756,#u820-757,#u820-759,#u820-760,#u820-762,#u820-763,#u820-765,#u820-766,#u820-768,#u820-769
-{
-	font-size: 12px;
-	text-decoration: none;
-	line-height: 14px;
-}
-
-#u820-4,#u820-16,#u820-48,#u820-553,#u820-568,#u820-784
-{
-	font-size: 10px;
-	text-decoration: none;
-	line-height: 12px;
-	font-weight: bold;
-}
-
-#u820-5,#u820-7,#u820-8,#u820-10,#u820-11,#u820-13,#u820-14,#u820-37,#u820-39,#u820-40,#u820-42,#u820-43,#u820-45,#u820-46,#u820-557,#u820-559,#u820-560,#u820-562,#u820-563,#u820-565,#u820-566,#u820-773,#u820-775,#u820-776,#u820-778,#u820-779,#u820-781,#u820-782
-{
-	font-weight: normal;
-	font-style: italic;
-}
-
-#u820-20,#u820-21,#u820-24,#u820-26,#u820-27,#u820-29,#u820-30,#u820-32,#u820-33,#u820-35,#u820-36,#u820-53,#u820-555,#u820-556,#u820-570,#u820-574,#u820-771,#u820-772,#u820-786
-{
-	font-size: 12px;
-	text-decoration: none;
-	line-height: 14px;
-	font-weight: normal;
-}
-
-#pu226
-{
-	width: 0.01px;
-	padding-bottom: 50px;
-	margin-right: -10000px;
-	margin-top: -1px;
-	margin-left: 26px;
-}
-
 #u226
 {
-	z-index: 847;
+	z-index: 868;
 	top: 5px;
 	left: 50%;
 	margin-left: -314px;
@@ -184,7 +72,7 @@
 
 #menuu136
 {
-	z-index: 804;
+	z-index: 825;
 	width: 586px;
 	top: -1px;
 	left: 50%;
@@ -638,15 +526,228 @@
 	margin: 0px -10000px 0px 0px;
 }
 
+#u392-4
+{
+	z-index: 2;
+	width: 639px;
+	min-height: 34px;
+	background-color: transparent;
+	line-height: 31px;
+	text-align: center;
+	font-size: 26px;
+	color: #14988B;
+	font-weight: bold;
+	margin-left: 20px;
+	margin-top: 9px;
+	position: relative;
+}
+
+#u1291-5
+{
+	z-index: 801;
+	width: 639px;
+	min-height: 21px;
+	background-color: transparent;
+	text-decoration: none;
+	line-height: 19px;
+	color: #000000;
+	font-size: 16px;
+	font-weight: bold;
+	margin-left: 21px;
+	position: relative;
+}
+
+#pu1334
+{
+	width: 0.01px;
+	margin-left: 21px;
+}
+
+#u1334
+{
+	z-index: 820;
+	width: 83px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u1328
+{
+	z-index: 818;
+	width: 83px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 83px;
+}
+
+#u1322
+{
+	z-index: 816;
+	width: 81px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 166px;
+}
+
+#u1316
+{
+	z-index: 814;
+	width: 71px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 248px;
+}
+
+#u1310
+{
+	z-index: 812;
+	width: 80px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 319px;
+}
+
+#u1304
+{
+	z-index: 810;
+	width: 82px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 399px;
+}
+
+#u1298
+{
+	z-index: 808;
+	width: 78px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 481px;
+}
+
+#u1292
+{
+	z-index: 806;
+	width: 78px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 559px;
+}
+
+#u820-788
+{
+	z-index: 6;
+	width: 639px;
+	min-height: 480px;
+	background-color: transparent;
+	color: #000000;
+	margin-left: 20px;
+	margin-top: 9px;
+	position: relative;
+}
+
+#u820-3
+{
+	font-size: 10px;
+	text-decoration: none;
+	font-weight: bold;
+	line-height: 0px;/* 0 for mixed font sized paras; applied on spans instead */
+}
+
+#u820
+{
+	font-size: 12px;
+	text-decoration: none;
+	color: #000000;
+	font-weight: normal;
+	line-height: 14px;
+}
+
+#u1026
+{
+	margin-top: -54px;
+	margin-bottom: 54px;
+}
+
+#u820-52
+{
+	font-size: 12px;
+	line-height: 14px;
+}
+
+#u1028
+{
+	margin-top: -56px;
+	margin-bottom: 56px;
+}
+
+#u820-17,#u820-49,#u820-571
+{
+	font-size: 1px;
+	line-height: 0px;
+}
+
+#u1024
+{
+	margin-top: -70px;
+	margin-bottom: 70px;
+}
+
+#u820-23,#u820-55,#u820-56,#u820-576,#u820-577
+{
+	font-size: 16px;
+	text-decoration: none;
+	line-height: 19px;
+	font-weight: bold;
+}
+
+#u820-58,#u820-59,#u820-61,#u820-62,#u820-64,#u820-65,#u820-67,#u820-68,#u820-70,#u820-71,#u820-73,#u820-74,#u820-76,#u820-77,#u820-79,#u820-80,#u820-82,#u820-83,#u820-85,#u820-86,#u820-88,#u820-89,#u820-91,#u820-92,#u820-94,#u820-95,#u820-97,#u820-98,#u820-100,#u820-101,#u820-103,#u820-104,#u820-106,#u820-107,#u820-109,#u820-110,#u820-112,#u820-113,#u820-115,#u820-116,#u820-118,#u820-119,#u820-121,#u820-122,#u820-124,#u820-125,#u820-127,#u820-128,#u820-130,#u820-131,#u820-133,#u820-134,#u820-136,#u820-137,#u820-139,#u820-140,#u820-142,#u820-143,#u820-145,#u820-146,#u820-148,#u820-149,#u820-151,#u820-152,#u820-154,#u820-155,#u820-157,#u820-158,#u820-160,#u820-161,#u820-163,#u820-164,#u820-166,#u820-167,#u820-169,#u820-170,#u820-172,#u820-173,#u820-175,#u820-176,#u820-178,#u820-179,#u820-181,#u820-182,#u820-184,#u820-185,#u820-187,#u820-188,#u820-190,#u820-191,#u820-193,#u820-194,#u820-196,#u820-197,#u820-199,#u820-200,#u820-202,#u820-203,#u820-205,#u820-206,#u820-208,#u820-209,#u820-211,#u820-212,#u820-214,#u820-215,#u820-217,#u820-218,#u820-220,#u820-221,#u820-223,#u820-224,#u820-226,#u820-227,#u820-229,#u820-230,#u820-232,#u820-233,#u820-235,#u820-236,#u820-238,#u820-239,#u820-241,#u820-242,#u820-244,#u820-245,#u820-247,#u820-248,#u820-250,#u820-251,#u820-253,#u820-254,#u820-256,#u820-258,#u820-259,#u820-261,#u820-262,#u820-264,#u820-265,#u820-267,#u820-268,#u820-270,#u820-271,#u820-273,#u820-274,#u820-276,#u820-277,#u820-279,#u820-280,#u820-282,#u820-283,#u820-285,#u820-286,#u820-288,#u820-289,#u820-291,#u820-292,#u820-294,#u820-295,#u820-297,#u820-298,#u820-300,#u820-301,#u820-303,#u820-304,#u820-306,#u820-307,#u820-309,#u820-310,#u820-312,#u820-313,#u820-315,#u820-316,#u820-318,#u820-319,#u820-321,#u820-322,#u820-324,#u820-325,#u820-327,#u820-328,#u820-330,#u820-331,#u820-333,#u820-334,#u820-336,#u820-337,#u820-339,#u820-340,#u820-342,#u820-343,#u820-345,#u820-346,#u820-348,#u820-349,#u820-351,#u820-352,#u820-354,#u820-355,#u820-357,#u820-358,#u820-360,#u820-361,#u820-363,#u820-364,#u820-366,#u820-367,#u820-369,#u820-370,#u820-372,#u820-373,#u820-375,#u820-376,#u820-378,#u820-379,#u820-381,#u820-382,#u820-384,#u820-385,#u820-387,#u820-388,#u820-390,#u820-391,#u820-393,#u820-394,#u820-396,#u820-397,#u820-399,#u820-400,#u820-402,#u820-403,#u820-405,#u820-406,#u820-408,#u820-409,#u820-411,#u820-412,#u820-414,#u820-415,#u820-417,#u820-418,#u820-420,#u820-421,#u820-423,#u820-424,#u820-426,#u820-427,#u820-429,#u820-430,#u820-432,#u820-433,#u820-435,#u820-436,#u820-438,#u820-439,#u820-441,#u820-442,#u820-444,#u820-445,#u820-447,#u820-448,#u820-450,#u820-451,#u820-453,#u820-454,#u820-456,#u820-457,#u820-459,#u820-460,#u820-462,#u820-463,#u820-465,#u820-466,#u820-468,#u820-469,#u820-471,#u820-472,#u820-474,#u820-475,#u820-477,#u820-478,#u820-480,#u820-481,#u820-483,#u820-484,#u820-486,#u820-487,#u820-489,#u820-490,#u820-492,#u820-493,#u820-495,#u820-496,#u820-498,#u820-499,#u820-501,#u820-502,#u820-504,#u820-505,#u820-507,#u820-508,#u820-510,#u820-511,#u820-513,#u820-514,#u820-516,#u820-517,#u820-519,#u820-520,#u820-522,#u820-523,#u820-525,#u820-526,#u820-528,#u820-529,#u820-531,#u820-532,#u820-534,#u820-535,#u820-537,#u820-538,#u820-540,#u820-541,#u820-543,#u820-544,#u820-546,#u820-547,#u820-549,#u820-550,#u820-552,#u820-579,#u820-580,#u820-582,#u820-583,#u820-585,#u820-586,#u820-588,#u820-589,#u820-591,#u820-592,#u820-594,#u820-595,#u820-597,#u820-598,#u820-600,#u820-601,#u820-603,#u820-604,#u820-606,#u820-607,#u820-609,#u820-610,#u820-612,#u820-613,#u820-615,#u820-616,#u820-618,#u820-619,#u820-621,#u820-622,#u820-624,#u820-625,#u820-627,#u820-628,#u820-630,#u820-631,#u820-633,#u820-634,#u820-636,#u820-637,#u820-639,#u820-640,#u820-642,#u820-643,#u820-645,#u820-646,#u820-648,#u820-649,#u820-651,#u820-652,#u820-654,#u820-655,#u820-657,#u820-658,#u820-660,#u820-661,#u820-663,#u820-664,#u820-666,#u820-667,#u820-669,#u820-670,#u820-672,#u820-673,#u820-675,#u820-676,#u820-678,#u820-679,#u820-681,#u820-682,#u820-684,#u820-685,#u820-687,#u820-688,#u820-690,#u820-691,#u820-693,#u820-694,#u820-696,#u820-697,#u820-699,#u820-700,#u820-702,#u820-703,#u820-705,#u820-706,#u820-708,#u820-709,#u820-711,#u820-712,#u820-714,#u820-715,#u820-717,#u820-718,#u820-720,#u820-721,#u820-723,#u820-724,#u820-726,#u820-727,#u820-729,#u820-730,#u820-732,#u820-733,#u820-735,#u820-736,#u820-738,#u820-739,#u820-741,#u820-742,#u820-744,#u820-745,#u820-747,#u820-748,#u820-750,#u820-751,#u820-753,#u820-754,#u820-756,#u820-757,#u820-759,#u820-760,#u820-762,#u820-763,#u820-765,#u820-766,#u820-768,#u820-769
+{
+	font-size: 12px;
+	text-decoration: none;
+	line-height: 14px;
+}
+
+#u820-4,#u820-16,#u820-48,#u820-553,#u820-568,#u820-784
+{
+	font-size: 10px;
+	text-decoration: none;
+	line-height: 12px;
+	font-weight: bold;
+}
+
+#u820-5,#u820-7,#u820-8,#u820-10,#u820-11,#u820-13,#u820-14,#u820-37,#u820-39,#u820-40,#u820-42,#u820-43,#u820-45,#u820-46,#u820-557,#u820-559,#u820-560,#u820-562,#u820-563,#u820-565,#u820-566,#u820-773,#u820-775,#u820-776,#u820-778,#u820-779,#u820-781,#u820-782
+{
+	font-weight: normal;
+	font-style: italic;
+}
+
+#u820-20,#u820-21,#u820-24,#u820-26,#u820-27,#u820-29,#u820-30,#u820-32,#u820-33,#u820-35,#u820-36,#u820-53,#u820-555,#u820-556,#u820-570,#u820-574,#u820-771,#u820-772,#u820-786
+{
+	font-size: 12px;
+	text-decoration: none;
+	line-height: 14px;
+	font-weight: normal;
+}
+
 #pu321-4
 {
 	width: 0.01px;
-	margin: 11103px -10000px -15px 12px;
+	margin-left: 12px;
+	margin-top: 21px;
 }
 
 #u321-4
 {
-	z-index: 848;
+	z-index: 869;
 	width: 282px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -663,7 +764,7 @@
 
 #u334-26
 {
-	z-index: 852;
+	z-index: 873;
 	width: 377px;
 	min-height: 14px;
 	margin-right: -10000px;
@@ -689,6 +790,5 @@ body
 #page .verticalspacer
 {
 	clear: both;
-	margin-bottom: -11103px;
 }
 
