--- a/css/links.css
+++ b/css/links.css
@@ -1,7 +1,7 @@
 .version.links /* version checker */
 {
-	color: #0000FA;
-	background-color: #1F0F84;
+	color: #0000E7;
+	background-color: #1EC2ED;
 }
 
 .html
@@ -517,10 +517,10 @@
 	width: 640px;
 	min-height: 34px;
 	background-color: transparent;
-	color: #14988B;
 	line-height: 31px;
 	text-align: center;
 	font-size: 26px;
+	color: #14988B;
 	font-weight: bold;
 	margin-left: 20px;
 	position: relative;
