--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000002;
-	background-color: #84E36E;
+	color: #000004;
+	background-color: #E19249;
 }
 
 .html
@@ -68,8 +68,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	filter: alpha(opacity=50);
 	color: #000000;
-	line-height: 13px;
 	font-size: 11px;
+	line-height: 13px;
 	left: -1px;
 	margin-top: 1px;
 	position: relative;
