--- a/css/publications.css
+++ b/css/publications.css
@@ -1,7 +1,7 @@
 .version.publications /* version checker */
 {
-	color: #0000E3;
-	background-color: #EEED65;
+	color: #000001;
+	background-color: #3F0369;
 }
 
 .html
@@ -533,9 +533,9 @@
 	min-height: 34px;
 	background-color: transparent;
 	color: #14988B;
-	line-height: 31px;
 	text-align: center;
 	font-size: 26px;
+	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
 	margin-top: 9px;
@@ -550,8 +550,8 @@
 	background-color: transparent;
 	color: #000000;
 	text-decoration: none;
-	line-height: 19px;
 	font-size: 16px;
+	line-height: 19px;
 	font-weight: bold;
 	margin-left: 21px;
 	position: relative;
