--- a/css/research.css
+++ b/css/research.css
@@ -1,7 +1,7 @@
 .version.research /* version checker */
 {
 	color: #00000B;
-	background-color: #340BDB;
+	background-color: #C50AB5;
 }
 
 .html
@@ -519,9 +519,9 @@
 	min-height: 34px;
 	background-color: transparent;
 	color: #14988B;
-	line-height: 31px;
 	text-align: center;
 	font-size: 26px;
+	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
 	position: relative;
