--- a/css/research.css
+++ b/css/research.css
@@ -1,7 +1,7 @@
 .version.research /* version checker */
 {
-	color: #00000B;
-	background-color: #C50AB5;
+	color: #000001;
+	background-color: #5AE8CD;
 }
 
 .html
@@ -51,34 +51,34 @@
 	margin-left: -266px;
 }
 
-#u137
+#u1394
 {
 	width: 74px;
 	min-height: 50px;
 	margin-right: -10000px;
 }
 
-#u138
+#u1395
 {
 	width: 74px;
 	padding-bottom: 31px;
 }
 
-#u138:hover
+#u1395:hover
 {
 	width: 74px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u138.MuseMenuActive
+#u1395.MuseMenuActive
 {
 	width: 74px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u139-4
+#u1396-4
 {
 	width: 66px;
 	min-height: 19px;
@@ -87,7 +87,7 @@
 	left: 4px;
 }
 
-#u138:hover #u139-4
+#u1395:hover #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -96,7 +96,7 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u138:active #u139-4
+#u1395:active #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -105,7 +105,7 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u138.MuseMenuActive #u139-4
+#u1395.MuseMenuActive #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -518,10 +518,10 @@
 	width: 640px;
 	min-height: 34px;
 	background-color: transparent;
+	line-height: 31px;
 	color: #14988B;
 	text-align: center;
 	font-size: 26px;
-	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
 	position: relative;
