--- a/css/resources.css
+++ b/css/resources.css
@@ -1,7 +1,7 @@
 .version.resources /* version checker */
 {
-	color: #00000D;
-	background-color: #1C08AA;
+	color: #0000F5;
+	background-color: #9922E0;
 }
 
 .html
@@ -51,34 +51,34 @@
 	margin-left: -266px;
 }
 
-#u137
+#u1394
 {
 	width: 74px;
 	min-height: 50px;
 	margin-right: -10000px;
 }
 
-#u138
+#u1395
 {
 	width: 74px;
 	padding-bottom: 31px;
 }
 
-#u138:hover
+#u1395:hover
 {
 	width: 74px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u138.MuseMenuActive
+#u1395.MuseMenuActive
 {
 	width: 74px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u139-4
+#u1396-4
 {
 	width: 66px;
 	min-height: 19px;
@@ -87,7 +87,7 @@
 	left: 4px;
 }
 
-#u138:hover #u139-4
+#u1395:hover #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -96,7 +96,7 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u138:active #u139-4
+#u1395:active #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -105,7 +105,7 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u138.MuseMenuActive #u139-4
+#u1395.MuseMenuActive #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -518,10 +518,10 @@
 	width: 640px;
 	min-height: 34px;
 	background-color: transparent;
+	line-height: 31px;
 	color: #14988B;
 	text-align: center;
 	font-size: 26px;
-	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
 	position: relative;
@@ -547,10 +547,10 @@
 	width: 451px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #000000;
+	line-height: 14px;
 	text-decoration: none;
 	font-size: 12px;
-	line-height: 14px;
+	color: #000000;
 	font-weight: bold;
 	position: relative;
 }
@@ -600,9 +600,9 @@
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
+	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
-	line-height: 14px;
 	font-weight: normal;
 	margin-left: 1px;
 	margin-top: 3px;
@@ -650,9 +650,9 @@
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
+	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
-	line-height: 14px;
 	font-weight: normal;
 	margin-top: 3px;
 	position: relative;
@@ -700,9 +700,9 @@
 	width: 144px;
 	min-height: 48px;
 	background-color: transparent;
+	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
-	line-height: 14px;
 	font-weight: normal;
 	margin-top: 2px;
 	position: relative;
@@ -714,8 +714,8 @@
 	width: 163px;
 	min-height: 323px;
 	background-color: transparent;
-	color: #000000;
 	text-decoration: none;
+	color: #000000;
 	position: relative;
 	margin-right: -10000px;
 	left: 472px;
