--- a/css/lab-members.css
+++ b/css/lab-members.css
@@ -1,7 +1,7 @@
 .version.lab_members /* version checker */
 {
-	color: #000007;
-	background-color: #BCC5AA;
+	color: #0000E5;
+	background-color: #4F9198;
 }
 
 .html
@@ -50,34 +50,34 @@
 	margin-left: -266px;
 }
 
-#u137
+#u1394
 {
 	width: 74px;
 	min-height: 50px;
 	margin-right: -10000px;
 }
 
-#u138
+#u1395
 {
 	width: 74px;
 	padding-bottom: 31px;
 }
 
-#u138:hover
+#u1395:hover
 {
 	width: 74px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u138.MuseMenuActive
+#u1395.MuseMenuActive
 {
 	width: 74px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u139-4
+#u1396-4
 {
 	width: 66px;
 	min-height: 19px;
@@ -86,7 +86,7 @@
 	left: 4px;
 }
 
-#u138:hover #u139-4
+#u1395:hover #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -95,7 +95,7 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u138:active #u139-4
+#u1395:active #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -104,7 +104,7 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u138.MuseMenuActive #u139-4
+#u1395.MuseMenuActive #u1396-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -517,10 +517,10 @@
 	width: 639px;
 	min-height: 34px;
 	background-color: transparent;
+	line-height: 31px;
 	color: #14988B;
 	text-align: center;
 	font-size: 26px;
-	line-height: 31px;
 	font-weight: bold;
 	margin-left: 20px;
 	position: relative;
